# ros_cameras_controller

./: Dockerfile  README.md  entrypoint.sh
commander/: CMakeLists.txt  README.md  package.xml  setup.py
commander/launch/: commander.launch
commander/resources/: schema.sql
commander/scripts/: commander
commander/src/commander/: AddCameraCommand.py  Camera.py  Command.py  Process.py
commander/src/commander/commands/: AddCameraCommand.py  AddFilterCommand.py  Command.py  GetCameraCommand.py  GetCamerasListCommand.py  GetFilterTypesCommand.py  RemoveCameraCommand.py  RemoveFilterCommand.py  UnknownCommand.py  UpdateCamerasCommand.py
commander/src/commander/data_classes/: Camera.py  Filter.py
commander/src/commander/executor/: CameraExecutor.py  Executor.py
commander/src/commander/executors/: CameraExecutor.py  Executor.py  ThresholdFilterExecutor.py
commander/src/commander/utils/: Database.py  Process.py
commander/srv/: commander.srv
image_processing_filters/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
image_processing_filters/include/image_processing_filters/: FaceDetectionFilterNodelet.h  ThresholdFilterNodelet.h
image_processing_filters/launch/: facedetection_filter.launch  image_processing_filters.launch
image_processing_filters/src/: FaceDetectionFilterNodelet.cpp  ThresholdFilterNodelet.cpp
video_stream_to_topic/: CMakeLists.txt  README.md  package.xml
video_stream_to_topic/include/video_stream_to_topic/: VideoStreamToTopic.h
video_stream_to_topic/launch/: video_stream_to_topic.launch
video_stream_to_topic/src/: VideoStreamToTopic.cpp  video_stream_to_topic_node.cpp
web_console/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
web_console/launch/: web_console.launch
web_console/scripts/: front_end_setup.sh  web_console  web_console.py
web_console/src/front_end_app/: package.json  webpack.config.js
web_console/src/front_end_app/src/app/: app.config.js  app.html  app.js  app.spec.js
web_console/src/front_end_app/src/app/about/: about.controller.js  about.html  index.js
web_console/src/front_end_app/src/app/alert/: alert.controller.js  alert.directive.js  alert.html  alert.service.js  index.js
web_console/src/front_end_app/src/app/cameras/: cameras.controller.js  cameras.html  cameras.routes.js  cameras.service.js  index.js
web_console/src/front_end_app/src/app/cameras/camera/: camera.controller.js  camera.html  camera.routes.js  index.js
web_console/src/front_end_app/src/app/directives/: mjpeg.directive.js
web_console/src/front_end_app/src/app/filters/: filters.controller.js  filters.html  filters.routes.js  filters.service.js  index.js
web_console/src/front_end_app/src/app/home/: home.controller.js  home.html  index.js
web_console/src/front_end_app/src/app/mjpeg/: index.js  mjpeg.directive.js
web_console/src/front_end_app/src/app/services/: ros.service.js
web_console/src/front_end_app/src/public/: index.html
web_console/src/front_end_app/src/style/: app.css
web_console/src/static/: index.html
web_console/src/web_console/: __init__.py  controllers.py
