<?xml version="1.0"?>
<package format="2">
    <name>commander</name>
    <version>0.0.1</version>
    <description>
        Commander which handles requests.
    </description>
    <maintainer email="ugnius@malukas.lt">Ugnius Malukas</maintainer>
    <author email="ugnius@malukas.lt">Ugnius Malukas</author>
    <license>BSD 3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>message_generation</buildtool_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
</package>
