<?xml version="1.0"?>
<package format="2">
    <name>video_stream_to_topic</name>
    <version>0.0.1</version>
    <description>
        This package provides "mjpeg" stream to ROS topic capability.
    </description>
    <maintainer email="ugnius@malukas.lt">Ugnius Malukas</maintainer>
    <author email="ugnius@malukas.lt">Ugnius Malukas</author>
    <license>BSD 3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
</package>
